--- a/src/Components/CSS/Home.css
+++ b/src/Components/CSS/Home.css
@@ -27,8 +27,9 @@
 }
 
 .itemsize{
+  margin-left: 5%;
+  margin-top: 50px;
   width: 90%;
-  height: 100%;
 }
 
   .det{
@@ -75,8 +76,8 @@
 
   .mobdet{
     margin-left: 5%;
-    margin-top: 25%;
-    height: 100%;
+    margin-top: 5%;
+    height: 400px;
     width: 90%;
     background: rgba(255, 255, 255, 0.8);
     display: flex;
