--- a/src/Components/CSS/AboutUs.css
+++ b/src/Components/CSS/AboutUs.css
@@ -1,14 +1,13 @@
 /*AboutUs starts*/
 
   .firstus{
-    width: 90%;
-    height: 520px;
-    border: 2px solid transparent;
-    margin-bottom: 35px;
-    margin-left: 5%;
+    width: 85%;
+    height: 70%;  
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: flex-start;
+    justify-content: space-between;
+    border: 2px solid black;
+    margin: auto;
   }
 
   .imgbox{
@@ -16,26 +15,29 @@
     align-items: center;
     justify-content: center;
     height: 400px;
-    width: 30%;
+    width: 35%;
+    border: 2px solid black;
+    margin-bottom: 40px;
   }
 
   .boximg{
-    height: 300px;
-    width: 90%;
+    height: 350px;
+    width: 350px;
     border-radius: 5px;
   }
 
   .contentbox{
-    width: 40%;
-    height: 75%;
-    margin-left: 70px;
+    width: 60%;
+    height: 90%;
+    margin-left: 10%;
     display: flex;
     flex-flow: column;
+    border: 2px solid black;
   }
 
   h3.h{
+    padding-top: 30px;
     text-align: start;
-    padding-top: 15px;
     font-size: 30px;
     margin-bottom: 30px;
   }
@@ -43,11 +45,16 @@
   .p{
     text-align: start;
     font-size: 20px;
-    margin-bottom: 20%;
+    color: #7B7F8C;
+  }
+
+  .btnbox{
+    margin-top: 3%;
   }
 
   .btnread{
-    width: 200px;
+    margin-top: 15%;
+    width: 150px;
     color: #fff;
     background: #0c4480;
   }
@@ -62,6 +69,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     background-color: white;
+    border: 2px solid black;
   }
 
   .mobbtnbox{
@@ -75,15 +83,16 @@
     margin-top: 20px;
     width: 100%;
     height: 50%;
+    border: 2px solid black;
+    margin-bottom: 15px;
   }
 
   .mobboximg{
     height: 250px;
-    width: 90%;
+    width: 300px;
     border-radius: 5px;
   }
 
-  
   .moboutboximg{
     margin-top: 20px;
     padding-top: 20px;
@@ -100,7 +109,7 @@
 
   p.mobp{
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
     color: grey;
   }
 
