--- a/src/Components/CSS/Contacts.css
+++ b/src/Components/CSS/Contacts.css
@@ -5,6 +5,7 @@
 .msheet{
     width: 100%;
     height: 500px;
+    border: 2px solid green;
 }
 
 .introduct{
@@ -14,7 +15,9 @@
     flex-flow: column nowrap;
     align-items: center;
     justify-content: flex-end;
+    border: 2px solid green;
 }
+
 
 .atheader{
     display: flex;
@@ -39,33 +42,44 @@
 }
 
 .mainsheet{
-    margin-top: 5%;
+    margin-top: 4%;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
+    border: 2px solid green;
 }
 
 .imgsheet{
-    width: 100%;
+    width: 66%;
     height: fit-content;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    border: 2px solid green;
 }
 
 .contentsheet{
-    width: 100%;
+    width: 85%;
     height: fit-content;
     display: flex;
-    align-items: baseline;
-    justify-content: space-evenly;
+    align-items: inherit;
+    justify-content: space-between;
+    border: 2px solid green;
 }
 
 .theheader{
     width: 30%;
     font-size: 18px;
-    text-align: center;
     color: #092F57;
+    text-align: center;
 }
+/* 
+.spana{
+    text-align: center;
+}
+
+.aspan{
+    margin-left: 30px;
+} */
 
 /*mob view starts*/
 
@@ -75,6 +89,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
+    border: 2px solid green;
 }
 
 .imgmobsheet{
@@ -90,6 +105,15 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
+    border: 2px solid green;
+}
+
+.amob{
+    margin-top: 120px;
+}
+
+.aspanmob{
+    margin-top: 50px;
 }
 
 .sheetmobimg{
@@ -98,7 +122,7 @@
 }
 
 .themobheader{
-    font-size: 16px;
+    font-size: 16.5px;
     text-align: start;
     color: #092F57;
     margin: auto;
