--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -6,8 +6,8 @@ header{
     background-color: white;
     position: fixed;
     z-index: 99;
+    border: 2px solid red;
   }
-  
   
   .brand-name{
     padding: 15px 15px;
@@ -22,6 +22,7 @@ header{
   .ui.button{
     color: #fff;
     background: #0c4480;
+    text-transform: uppercase;
   }
   
   .brand-name a{
@@ -36,10 +37,25 @@ header{
     color: #119ef0;
   }
 
+  .ui.menu a.item:hover{
+    color: #0c4480 !important;
+  }
+
+  .ui.menu a.item{
+    text-transform: uppercase;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+  }
+
   .mobbtn{
     margin-bottom: 50px;
   }
 
+  .ui.button:hover{
+    border: 1px solid  #0c4480;
+    color:  #0c4480;
+  }
   /*mobile view starts*/
 
 .navbtn{
@@ -50,6 +66,7 @@ header{
   justify-content: center;
   align-items: center;
   z-index: 99;
+  border: 2px solid red;
 }
 
 .icon{
