--- a/src/Components/CSS/Offers.css
+++ b/src/Components/CSS/Offers.css
@@ -2,19 +2,20 @@
 
 .sizpage{
     width: 100%;
-    height: 620px;
+    height: 550px;
     background: #EBEBEB;
+    border: 2px solid red;
 }
   
 
 .intr{
     display: flex;
     align-items: center;
-    margin-left: 100px;
+    margin-left: 50px;
 }
 
 .intr h2{
-    margin-top: 60px;
+    margin-top: 30px;
     font-style: normal;
     font-weight: 800;
     font-size: 30px;
@@ -25,168 +26,73 @@
 }
   
 .intr img{
-    margin-top: 60px;
+    margin-top: 30px;
     margin-left: 24px;
     margin-bottom: 14px;
-}
-
-.cardsize{
-    display: inline-block;
-    width: 20%;
-    height: fit-content;
-    margin-left: 5%;
-    position: relative;
-    box-sizing: border-box;
-    border-radius: 5px;
-}
-
-.carouselflow{
-    width: 80%;
-    height: 90%;
-    margin-left: 10%;
-    margin-top: 3%;
-    border: 2px solid red;
-}
-
-.carouselsize{
-    width: 100%;
-    height: 78%;
-    display: flex;
-    margin-top: 20px;
-    border: 2px solid red;
-}
-
-/* .cardoverload{
-    display: block;
-    width: 90%;
-    height: 80%;
-    margin-left: 4%;
-    overflow-x: hidden;
-    box-sizing: border-box;
-} */
-
-.deskoffersdisp{
-    display: block;
-    width: 100%;
-    height: 90%;
-    overflow-x: hidden;
-    box-sizing: border-box;
-    border: 2px solid green;
-}
-
-.deskofferdispscroll::-webkit-scrollbar{
-    display: none;
-}
-
-.deskofferdisp::-webkit-scrollbar{
-    display: none;
-}
-
-.deskoffersdispscroll{
-    display: block;
-    white-space: nowrap;
-    overflow-x: scroll;
-    scrollbar-width: none;
 }
 
 .deskoffersmobpic{
     display: inline-block;
     position: relative;
-    margin-left: 3.7%;
+    margin-left: 30px;
     box-sizing: border-box;
     border-radius: 5px;
-    width: 205px;
-    height: 100%;
+    width: 230px;
+    height: 400px;
     border: 2px solid white;
     background: white;
+    border: 2px solid red;
+}
+
+
+button.slick-next:before{
+    color: black;
+}
+
+button.slick-prev:before{
+    color: black;
 }
 
 .deskoffersmobpic img{
-    width: 200px;
+    width: 226.2px;
     height: 170px;
 }
 
 .deskoffersmobpic p{
     font-size: 14px;
-    border: 2px solid violet;
-    height: 50px;
-    display: flex;
-    flex-wrap: wrap;
+    width:auto;
+    margin-left: 10px;
 }
 
 .deskoffersmobpic h3{
     font-size: 18px;
-    color: turquoise;
-    border: 2px solid black;
+    color: #119ef0;
     margin-bottom: 0 !important;
+    margin-left: 10px;
 }
 
 .deskoffersmobpic h4{
     font-size: 18px;
-    border: 2px solid black;
     margin-top: 8px !important;
+    margin-left: 10px;
+}
+
+.ui.button.btnrea{
+    margin-left: 50px;
+    margin-top: 10px !important;
+}
+
+.boxslick{
+    width: 90%;
+    height: 80%;
+    margin-left: 5%;
+    margin-top: 15px;
+    border: 2px solid red;
 }
 
 /*mob view starts*/
 
-.mobcarouselflow{
-    width: 80%;
-    height: 90%;
-    margin-left: 10%;
-    margin-top: 3%;
-}
 
-.mobcardsize{
-    width: 60%;
-    height: 100%;
-    margin-left: 15%;
-}
-
-.imgincard{
-    width: 100%;
-    height: 60%;
-}
-
-.offersdisp{
-    display: block;
-    width: 90%;
-    height: 90%;
-    overflow-x: hidden;
-    box-sizing: border-box;
-}
-
-.offerdispscroll::-webkit-scrollbar{
-    display: none;
-}
-
-.offerdisp::-webkit-scrollbar{
-    display: none;
-}
-
-.offersdispscroll{
-    display: block;
-    white-space: nowrap;
-    overflow-x: scroll;
-    scrollbar-width: none;
-}
-
-.offersmobpic{
-    display: inline-block;
-    position: relative;
-    margin-left: 10%;
-    margin-top: 10px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    width: 255px;
-    height: 375px;
-    border: 2px solid white;
-    background: white;
-}
-
-.offersmobpic img{
-    width: 250px;
-    height: 170px;
-}
 /*mob view ends*/
 
 /*Offers page ends*/
