--- a/src/Components/CSS/Contacts.css
+++ b/src/Components/CSS/Contacts.css
@@ -4,7 +4,6 @@
 
 .msheet{
     width: 100%;
-    height: 500px;
     border: 2px solid green;
 }
 
@@ -18,6 +17,15 @@
     border: 2px solid green;
 }
 
+.head {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    color: white;
+    font-style: bold;
+    width: 99%;
+}
 
 .atheader{
     display: flex;
@@ -47,6 +55,7 @@
     flex-flow: row wrap;
     justify-content: space-evenly;
     border: 2px solid green;
+    margin-bottom: 50px;
 }
 
 .imgsheet{
@@ -90,6 +99,7 @@
     flex-flow: row wrap;
     justify-content: space-evenly;
     border: 2px solid green;
+    margin-bottom: 15px;
 }
 
 .imgmobsheet{
