--- a/src/Components/CSS/Footer.css
+++ b/src/Components/CSS/Footer.css
@@ -75,7 +75,8 @@
 .lastrectangle{
     width: 100%;
     height: 15px;
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
