--- a/src/Components/CSS/Contacts.css
+++ b/src/Components/CSS/Contacts.css
@@ -73,9 +73,12 @@
 
 .theheader{
     width: 30%;
-    font-size: 18px;
+    font-size: 16px;
     color: #092F57;
     text-align: center;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 18px;
 }
 /* 
 .spana{
@@ -93,9 +96,9 @@
     margin-top: 3%;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
     margin-bottom: 15px;
     width: 90%;
+    margin: auto;
 }
 
 .imgmobsheet{
@@ -103,6 +106,7 @@
     display: flex;
     justify-content: space-around;
     flex-flow: column wrap;
+    margin-left: 30px;
 }
 
 .contentmobsheet{
@@ -111,6 +115,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
+    margin-left: 20px;
 }
 
 .amob{
@@ -118,20 +123,23 @@
 }
 
 .aspanmob{
-    margin-top: 40px;
+    margin-top: 45px;
 }
 
 .sheetmobimg{
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
 }
 
 .themobheader{
-    font-size: 16.5px;
+    font-size: 16px;
     text-align: start;
     color: #092F57;
     margin: auto;
     margin-left: 0 !important;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
 }
 
 /*mob view ends*/
