--- a/src/Components/CSS/Home.css
+++ b/src/Components/CSS/Home.css
@@ -2,7 +2,7 @@
 
 .firstpage{
     width: 100%;
-    height: 90%;
+    height: 700px;
     display: flex;
     flex-flow: column wrap;
   }
@@ -37,7 +37,6 @@
     margin-top: 150px;
     margin-left: 70px;
     width: 50%;
-    height: 52%;
     background: rgba(255, 255, 255, 0.8);
   }
 
@@ -56,6 +55,7 @@
     width: 80%;
     height: 62%;
     margin-left: 10%;
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,6 +69,10 @@
     color: #092F57;
     font-style: normal;
     font-weight: normal;
+  }
+
+  .item.vb{
+    margin-bottom: 10%;
   }
 
   .ui.button{
@@ -93,7 +97,7 @@
     text-align: center;
     margin: auto;
     text-transform: uppercase;
-    padding-top: 100px;
+    padding-top: 60px;
     font-style: normal;
     font-weight: bold;
     font-size: 30px;
@@ -108,11 +112,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
   }
 
-  .lead.mobp{
+  .lead.mobilep{
     text-align: center;
-    font-size: 17px;
+    font-size: 18px;
+    color: #092F57;
+    font-weight: 500;
   }
 
   .item.mobbutton{
