--- a/src/Components/CSS/Contacts.css
+++ b/src/Components/CSS/Contacts.css
@@ -96,26 +96,24 @@
     margin-top: 3%;
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-between;
     margin-bottom: 15px;
     width: 90%;
-    margin: auto;
 }
 
 .imgmobsheet{
-    width: fit-content;
+    width: 25%;
     display: flex;
     justify-content: space-around;
     flex-flow: column wrap;
-    margin-left: 30px;
 }
 
 .contentmobsheet{
-    width: 50%;
+    width: 65%;
     height: 100%;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
-    margin-left: 20px;
 }
 
 .amob{
