--- a/src/Components/CSS/Contacts.css
+++ b/src/Components/CSS/Contacts.css
@@ -102,14 +102,14 @@
 }
 
 .imgmobsheet{
-    width: 25%;
+    width: 20%;
     display: flex;
     justify-content: space-between;
     flex-flow: column wrap;
 }
 
 .contentmobsheet{
-    width: 65%;
+    width: 72%;
     height: 100%;
     display: flex;
     flex-flow: column wrap;
@@ -125,13 +125,14 @@
 }
 
 .sheetmobimg{
-    width: 70px;
-    height: 70px;
-    margin-left: 13px;
+    width: 50px;
+    height: 50px;
+    margin-left: 18px;
+    margin-top:10px;
 }
 
 .themobheader{
-    font-size: 16px;
+    font-size: 18px;
     text-align: start;
     color: #092F57;
     margin: auto;
