--- a/src/Components/CSS/Offers.css
+++ b/src/Components/CSS/Offers.css
@@ -13,11 +13,10 @@
     margin-left: 50px;
 }
 
-
-
 .intr h2{
     margin-top: 30px;
     font-style: normal;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: 30px;
     line-height: 37px;
@@ -106,6 +105,7 @@ button.slick-prev:before{
     align-items: center;
     text-transform: uppercase;
     color: #092F57;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /*mob view ends*/
