--- a/src/Components/CSS/Offers.css
+++ b/src/Components/CSS/Offers.css
@@ -6,11 +6,10 @@
     background: #EBEBEB;
 }
   
-
 .intr{
     display: flex;
     align-items: center;
-    margin-left: 50px;
+    margin-left: 75px;
 }
 
 .intr h2{
@@ -41,7 +40,9 @@
     height: 400px;
     border: 2px solid white;
     background: white;
+    box-shadow: 2px 5px 7px 1px rgba(0, 0, 0, 0.25);
 }
+
 
 
 button.slick-next:before{
@@ -51,6 +52,7 @@ button.slick-next:before{
 button.slick-prev:before{
     color: black;
 }
+
 
 .deskoffersmobpic img{
     width: 226.2px;
@@ -106,6 +108,48 @@ button.slick-prev:before{
     text-transform: uppercase;
     color: #092F57;
     font-family: 'Montserrat', sans-serif;
+}
+
+.Mobslide{
+    display: inline-block;
+    position: relative;
+    margin-left: 15%;
+    box-sizing: border-box;
+    border-radius: 5px;
+    width: 250px;
+    height: 400px;
+    border: 2px solid white;
+    background: white;
+    box-shadow: 2px 5px 7px 1px rgba(0, 0, 0, 0.25);
+    margin-bottom: 20px;
+}
+
+.Mobslide img{
+    width: 246.2px;
+    height: 170px;
+}
+
+.Mobslide p{
+    font-size: 14px;
+    width:85%;
+    margin-left: 15px;
+}
+
+.Mobslide h3{
+    font-size: 20px;
+    color: #119ef0;
+    margin-bottom: 0 !important;
+    margin-left: 15px;
+}
+
+.Mobslide h4{
+    font-size: 18px;
+    margin-top: 8px !important;
+    margin-left: 15px;
+}
+
+.slick-dots{
+    margin-top: 10px;
 }
 
 /*mob view ends*/
