--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -51,6 +51,12 @@ header{
   }
   /*mobile view starts*/
 
+  .Mobbrand-name{
+    padding: 15px 15px;
+    margin-left: 20%;
+    width: auto;
+  }
+
 .navbtn{
   width: 100%;
   height: 200px;
