--- a/src/Components/CSS/Offers.css
+++ b/src/Components/CSS/Offers.css
@@ -148,6 +148,11 @@ button.slick-prev:before{
     margin-left: 15px;
 }
 
+.ui.button.btnre{
+    margin-left: 60px;
+    margin-top: 10px !important;
+}
+
 .slick-dots{
     margin-top: 10px;
 }
