--- a/src/Components/CSS/Offers.css
+++ b/src/Components/CSS/Offers.css
@@ -41,6 +41,7 @@
     border: 2px solid white;
     background: white;
     box-shadow: 2px 5px 7px 1px rgba(0, 0, 0, 0.25);
+    margin-bottom: 20px;
 }
 
 
