--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -87,6 +87,37 @@ a.item.itemname:hover{
   margin-top: 25px;
 }
 
+.modal{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+  margin: auto;
+  background: rgba(0,0,0,0.5);
+}
+
+.popup{
+  width: 40%;
+  height: 55%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+  background: white;
+}
+
+.popup form{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+}
 /*mobile view ends*/
   
   /*Header ends*/
