--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -24,6 +24,8 @@ header{
     color: #fff;
     background: #0c4480;
     text-transform: uppercase;
+    font-weight: 400;
+  font-family: 'Montserrat';
   }
 /*   
   .brand-name{
@@ -93,31 +95,119 @@ a.item.itemname:hover{
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
   margin: auto;
   background: rgba(0,0,0,0.5);
 }
 
 .popup{
-  width: 40%;
-  height: 55%;
+  width: 350px;
+  height: 550px;
   display: flex;
   flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid red;
   background: white;
+  border-radius: 5px;
+}
+
+.popup img{
+  margin-left: 75px;
+}
+
+.topline{
+  margin-top: 10px;
+}
+
+.popup h2{
+  color: #0c4480;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat';
+  font-weight: 800;
+  font-size: 24px;
+  margin-bottom: 5px;
+  margin-top: 15px;
+}
+
+.popup p{
+  font-family: Montserrat;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 20px;
+text-align: center;
+color: #989CAC;
 }
 
 .popup form{
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
+  margin-left: 25px;
   display: flex;
   flex-flow: column;
-  justify-content: center;
   align-items: center;
-  border: 1px solid red;
 }
+
+.popup input{
+  margin-top: 20px;
+  height: 40px;
+  width: 290px;
+  font-size: 14px;
+  color: #979797;  
+  border: 0.2px solid #979797;
+  border-radius: 2px;
+  box-sizing: border-box;
+}
+
+.popup select{
+  margin-top: 20px;
+  width: 290px;
+  height: 40px;
+  border: 0.2px solid #979797;
+  border-radius: 2px;
+  font-size: 14px;
+  color: #979797;
+  box-sizing: border-box; 
+}
+
+.popup option{
+  width: 290px;
+}
+
+.ui.button.newbtn{
+  margin-top: 20px;
+  text-align: center;
+  font-weight: 400;
+  font-family: 'Montserrat';
+}
+
+.popup h3{
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  font-family: 'Montserrat';
+  color: #989CAC;
+}
+
+.ptag{
+  color: #0c4480;
+}
+
+.popupa{
+  color: #0c4480;
+}
+
+.popupa:hover{
+  color: purple;
+}
+
+.popup h5{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: 'Montserrat';
+  margin-top: 0;
+  color: #5FBFE2;
+}
+
 /*mobile view ends*/
   
   /*Header ends*/
