--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -99,6 +99,14 @@ a.item.itemname:hover{
   background: rgba(0,0,0,0.5);
 }
 
+.form{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .popup{
   width: 350px;
   height: 550px;
@@ -155,6 +163,13 @@ color: #989CAC;
   border: 0.2px solid #979797;
   border-radius: 2px;
   box-sizing: border-box;
+}
+
+.errorp{
+  color: red;
+  margin: 0 0 0 0;
+  font-weight: 400;
+  font-family: 'Montserrat';
 }
 
 .popup select{
