--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -128,7 +128,7 @@ a.item.itemname:hover{
   font-weight: 800;
   font-size: 24px;
   margin-bottom: 5px;
-  margin-top: 15px;
+  margin-top: 30px;
 }
 
 .popup p{
@@ -160,7 +160,7 @@ color: #989CAC;
   box-sizing: border-box;
   font-weight: 400;
   font-family: 'Montserrat';
-  padding-left: 5px;
+  padding-left: 7px;
 }
 
 .errorp{
@@ -177,7 +177,7 @@ color: #989CAC;
   border: 0.2px solid #979797;
   border-radius: 2px;
   font-size: 14px;
-  color: #979797;
+  color: #7b7878;
   box-sizing: border-box; 
   padding-left: 5px;
   font-weight: 400;
@@ -188,6 +188,7 @@ color: #989CAC;
   width: 290px;
   padding-left: 5px;
   margin-top: 5px;
+  color: #979797;
 }
 
 .ui.button.newbtn{
@@ -195,7 +196,20 @@ color: #989CAC;
   text-align: center;
   font-weight: 400;
   font-family: 'Montserrat';
-  padding-top: 10.5px !important;
+  padding-top: 11px !important;
+  padding-bottom: 10px !important;
+}
+
+.ui.button.cancelbtn:hover{
+  color: red;
+  background-color: #fff;
+  border: 1px solid red;
+}
+
+.ui.button.cancelbtn{
+  padding-top: 11px !important;
+  padding-bottom: 9.5px !important;
+  background-color: red;
 }
 
 .popup h3{
