--- a/src/Components/CSS/Header.css
+++ b/src/Components/CSS/Header.css
@@ -178,6 +178,7 @@ color: #989CAC;
   border-radius: 2px;
   font-size: 14px;
   color: #7b7878;
+  background-color: #fff;
   box-sizing: border-box; 
   padding-left: 5px;
   font-weight: 400;
