--- a/src/Components/CSS/Footer.css
+++ b/src/Components/CSS/Footer.css
@@ -21,13 +21,12 @@
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    height: 60px;
     margin-bottom: 15px;
 }
 
 .titlenames{
     font-style: normal;
-    font-weight: 700;
+    font-weight: 800;
     font-size: 16px;
     line-height: 20px;
     text-transform: uppercase;
@@ -36,6 +35,15 @@
     margin:auto;
     padding-bottom: 15px;
     padding-top: 20px;
+    font-family: 'Montserrat';
+}
+
+a.titlenames{
+    margin: 0;
+}
+
+a.titlenames:hover{
+    color: #092F57; 
 }
 
 .titlenames:first-child{
