--- a/src/Components/CSS/AboutUs.css
+++ b/src/Components/CSS/AboutUs.css
@@ -60,7 +60,7 @@
     margin-top: 15%;
     width: 150px;
     color: #fff;
-    background: #0c4480;
+    background: #092F57;
   }
 
   /* Mobile aboutus starts*/
