--- a/src/AboutUs/CSS/FirstPage.css
+++ b/src/AboutUs/CSS/FirstPage.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     font-size: 30px;
-    color: #0c4480;
+    color: #092F57;
     margin-top: 130px;
     font-weight: 800;
     margin-bottom: 20px;
@@ -39,7 +39,7 @@
     font-family: 'Montserrat';
     font-weight: 800;
     font-size: 30px;
-    color: #0c4480;
+    color: #092F57;
     text-transform: uppercase;
 }
 
