--- a/src/Components/CSS/Footer.css
+++ b/src/Components/CSS/Footer.css
@@ -25,7 +25,7 @@
 }
 
 .titlenames{
-    font-style: normal;
+    font-style: bold;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
